2005-10-28  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for cut and copy icons

2005-10-26  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links to gtk+/gnome stock trash icons

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.3.2 for release

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add link for the bookmark-new icon
	Add a link for gtk-help to the help-browser icon
	Add a link for gnome-joystick to the applications-games icon

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Remove kmail link and fix typo for the
	ksysguard link. patch from Niko Mirthes

2005-10-18  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Link stock_home to the new home icon
	Add links for the stop icon

2005-10-15  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.3.1 for release

2005-10-15  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Few more KDE links from Niko Mirthes
	Add stock_new-appointment and web-browser links for GNOME

2005-10-14  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add more KDE links. Patch from Niko Mirthes
	Add link for gnome-lockscreen to the system-lock-screen icon

2005-10-13  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.3.0 for release

2005-10-13  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links so that logout, search, and help
	show up properly in gnome. Patch from Steven Garrity

2005-10-13  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add edit-paste and utilities-system-monitor
	to the list of icons to map older names to

2005-10-12  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Update the links for some GTK+ stock icons
	to have -ltr and -rtl suffixes. Thanks to Luca Ferretti
	Add some more links for KDE icons. Thanks to Niko Mirthes for the patch
