@@ -1,3 +1,9 @@
+2005-11-01  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Update for more KDE icons, and add the
+	links for edit-redo and edit-undo
+	Patch from Niko Mirthes
+
 2005-10-28  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Add links for cut and copy icons
